log
Fri 05 May 2023 03:46:40 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  0|5
total_score: 0/70
e05d010
Fri 05 May 2023 03:56:35 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f9c59f8
Fri 05 May 2023 03:57:37 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:71:17: error: array subscript 9 is above array bounds of ‘int[9][9]’ [-Werror=array-bounds]
   71 |       nodo->sudo[i][j]=aux;
      |       ~~~~~~~~~~^~~
sudoku.c:7:8: note: while referencing ‘sudo’
    7 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
2ace818
Fri 05 May 2023 03:58:18 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
60799fe
Fri 05 May 2023 03:59:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
46b70b8
Fri 05 May 2023 04:00:26 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d8c61d4
Fri 05 May 2023 04:03:38 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
93e81f9
Fri 05 May 2023 04:03:59 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
a259476
Fri 05 May 2023 04:08:35 PM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:78:27: error: invalid use of undefined type ‘struct List’
   78 |           printf("%d",list[0]->sudo[in][jn]);
      |                           ^
sudoku.c:78:23: error: invalid use of incomplete typedef ‘List’
   78 |           printf("%d",list[0]->sudo[in][jn]);
      |                       ^~~~
sudoku.c:77:17: error: variable ‘jn’ set but not used [-Werror=unused-but-set-variable]
   77 |         for(int jn=0;i<9;in++){
      |                 ^~
cc1: all warnings being treated as errors
Compilation failed
eec947f
Fri 05 May 2023 04:10:22 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6181308
Fri 05 May 2023 04:11:35 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d022442
Fri 05 May 2023 04:13:08 PM UTC: 
 sudoku.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
ddacdfb
